k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: distroless-nextjs
    app.kubernetes.io/instance: distroless-nextjs-instance
    app.kubernetes.io/name: distroless-nextjs
  name: distroless-nextjs
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: distroless-nextjs-instance
    app.kubernetes.io/name: distroless-nextjs
  sessionAffinity: None
  type: ClusterIP
